correct spacing in spotlight container

--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -95,8 +95,16 @@
         
     }
 
-    .spotlight div {
-        height: 32%;
+    .spotlight article{
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content:space-between;
+
+    }
+
+    .spotcard a {
+        padding-top: 10px;
     }
 
     .spotlight div:nth-child(3){
